# clone-protocol

./: .gitignore  .solitarc.js  Anchor.toml  Cargo.toml  Dockerfile  README.md  cli.ts  config.json  package-lock.json  package.json  tsconfig.json
commands/: admin.ts  env.ts  interfaces.ts  mock.ts  user.ts  utils.ts  view.ts
programs/clone/: Cargo.toml
programs/clone/src/: decimal.rs  error.rs  events.rs  lib.rs  math.rs  states.rs
programs/clone/src/instructions/: add_auth.rs  add_collateral.rs  add_collateral_to_borrow.rs  add_collateral_to_comet.rs  add_collateral_to_single_pool_comet.rs  add_liquidity_to_comet.rs  add_liquidity_to_single_pool_comet.rs  add_oracle_feed.rs  add_pool.rs  borrow_more.rs  burn_onusd.rs  buy_onasset.rs  close_borrow_positions_account.rs  close_comet_account.rs  close_single_pool_comet.rs  close_single_pool_comet_account.rs  close_user_account.rs  collect_lp_rewards.rs  create_token_metadata.rs  deprecate_pool.rs  initialize_borrow_position.rs  initialize_borrow_positions.rs  initialize_clone.rs  initialize_comet.rs  initialize_isolated_margin_user.rs  initialize_oracles.rs  initialize_pool.rs  initialize_pools.rs  initialize_single_pool_comet.rs  initialize_single_pool_comets.rs  initialize_single_position_comet_user.rs  initialize_token_data.rs  initialize_user.rs  liquidate_borrow_position.rs  liquidate_comet_borrow.rs  liquidate_comet_collateral.rs  liquidate_comet_collateral_ild.rs  liquidate_comet_ild.rs  liquidate_comet_nonstable_collateral.rs  liquidate_comet_onasset_ild.rs  (+29 more)
programs/clone/tests/: security.rs
programs/incept/: Cargo.toml
programs/incept-comet-manager/: Cargo.toml
programs/incept-comet-manager/src/: config.rs  error.rs  lib.rs  states.rs
programs/incept-comet-manager/src/instructions/: add_collateral_to_comet.rs  add_liquidity.rs  assign_redemption_strike.rs  burn_usdi.rs  close_comet_manager.rs  fulfill_redemption_request.rs  incept_swap.rs  initialize.rs  initialize_subscription.rs  initiate_comet_manager_closing.rs  initiate_comet_manager_termination.rs  jupiter_mock_swap.rs  management_fee_claim.rs  mint_usdi.rs  mod.rs  owner_withdrawal.rs  pay_ild.rs  recenter.rs  redeem.rs  redeem_from_closing_manager.rs  remove_comet_position.rs  request_redemption.rs  subscribe.rs  terminate_comet_manager.rs  unwrap_iasset.rs  update_net_value.rs  withdraw_collateral_from_comet.rs  withdraw_liquidity.rs  wrap_asset.rs
programs/incept/src/: error.rs  events.rs  instructions.rs  lib.rs  math.rs  states.rs  value.rs
programs/incept/src/instructions/: add_collateral.rs  add_collateral_to_borrow.rs  add_collateral_to_comet.rs  add_collateral_to_mint.rs  add_collateral_to_single_pool_comet.rs  add_iasset_to_borrow.rs  add_iasset_to_mint.rs  add_liquidity_to_comet.rs  add_liquidity_to_single_pool_comet.rs  burn_usdi.rs  buy_iasset.rs  buy_synth.rs  close_borrow_positions_account.rs  close_comet_account.rs  close_liquidity_positions_account.rs  close_mint_positions_account.rs  close_single_pool_comet.rs  close_single_pool_comet_account.rs  close_user_account.rs  deprecate_pool.rs  initialize_borrow_position.rs  initialize_comet.rs  initialize_comet_manager.rs  initialize_incept.rs  initialize_liquidity_position.rs  initialize_liquidity_positions.rs  initialize_manager.rs  initialize_mint_position.rs  initialize_mint_positions.rs  initialize_pool.rs  initialize_single_pool_comet.rs  initialize_single_pool_comets.rs  initialize_user.rs  liquidate_borrow_position.rs  liquidate_comet.rs  liquidate_comet_borrow.rs  liquidate_comet_il_reduction.rs  liquidate_comet_ild.rs  liquidate_comet_nonstable_collateral.rs  liquidate_comet_position_reduction.rs  (+34 more)
programs/incept/src/procedures/: add_collateral.rs  add_collateral_to_comet.rs  add_collateral_to_mint.rs  add_iasset_to_mint.rs  add_liquidity_to_comet.rs  buy_synth.rs  close_single_pool_comet.rs  initialize_comet.rs  initialize_comet_manager.rs  initialize_liquidity_position.rs  initialize_liquidity_positions.rs  initialize_manager.rs  initialize_mint_position.rs  initialize_mint_positions.rs  initialize_pool.rs  initialize_single_pool_comet.rs  initialize_single_pool_comets.rs  initialize_user.rs  liquidate_comet_il_reduction.rs  liquidate_comet_position_reduction.rs  liquidate_mint_position.rs  mint_usdi.rs  mod.rs  pay_back_mint.rs  pay_impermanent_loss_debt.rs  provide_liquidity.rs  recenter_comet.rs  sell_synth.rs  update_il_health_score_coefficient.rs  update_pool_health_score_coefficient.rs  update_prices.rs  withdraw_collateral_from_comet.rs  withdraw_collateral_from_mint.rs  withdraw_liquidity.rs  withdraw_liquidity_from_comet.rs  withdraw_liquidity_from_single_pool_comet.rs
programs/isolated_margin_comets/: Cargo.toml
programs/isolated_margin_comets/src/: lib.rs  states.rs
programs/isolated_margin_comets/src/instructions/: add_collateral_to_isolated_comet.rs  add_isolated_comet.rs  add_liquidity_to_isolated_comet.rs  close_isolated_comet.rs  close_token_account.rs  collect_lp_rewards_from_isolated_comet.rs  initialize.rs  mod.rs  pay_isolated_comet_impermanent_loss_debt.rs  remove_position_from_isolated_comet.rs  withdraw_collateral_from_isolated_comet.rs  withdraw_liquidity_from_isolated_comet.rs
programs/jupiter-agg-mock/: Cargo.toml
programs/jupiter-agg-mock/src/: lib.rs
programs/mock-asset-faucet/: Cargo.toml
programs/mock-asset-faucet/src/: lib.rs
programs/mock_usdc/: Cargo.toml
programs/mock_usdc/src/: instructions.rs  lib.rs  states.rs
programs/pyth/: Cargo.toml
programs/pyth/src/: lib.rs  pc.rs
scripts/: comet_manager.ts  convert_phantom_to_fs_key.ts  price_pegging_bot.ts  pull_historical_transactions.ts  push_events_to_sheets.ts  push_transactions_to_endpoint.ts  run_action.ts
sdk/: package.json  tsconfig.json
sdk/jupiter-interface/: Cargo.toml  NOTES.md
sdk/jupiter-interface/src/: lib.rs
sdk/jupiter-interface/tests/: integration-test.rs
test-ledger/: faucet-keypair.json
tests/: .incept.ts.icloud  .liquidation.ts.icloud  bankrun_fixture.ts  clone.ts  depository-token.ts  incept.ts  isolated_margin_comets.ts  jupiter_mock.ts  (+5 more)
(+170 files in other folders)
