[package]
name = "clone"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "clone"

[features]
pyth-local = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["pyth-local"]

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.9.5"
bytemuck = "1.7.3"
pyth-client = "0.2.2"
thiserror = "1.0.24"
pyth = { path = "../pyth", version = "0.1.0", features = ["cpi"] }
clone-staking = { path = "../clone-staking", version = "0.1.0", features = ["cpi"] }
jupiter-agg-mock = { path = "../jupiter-agg-mock", version = "0.1.0", features = ["cpi"] }
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
pyth-sdk-solana = "0.7.0"
