[package]
name = "incept-comet-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "incept_comet_manager"

[features]
local-testing = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["local-testing"]

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
incept = { path = "../incept", version = "0.1.0", features = ["cpi"] }
bytemuck = "1.7.3"
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
