[package]
name = "jupiter-agg-mock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jupiter_agg_mock"

[features]
pyth-local = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["pyth-local"]

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
solana-program = "1.9.5"
bytemuck = "1.7.3"
pyth = { path = "../pyth", version = "0.1.0", features = ["cpi"] }
rust_decimal = { version = "1.25" }
rust_decimal_macros = "1.25"
pyth-sdk-solana = "0.7.0"
